# azv2hocr

./: README.md  pyproject.toml  todo.md
.github/workflows/: test.yml
azv2hocr/: cli.py  core.py  models.py
sample/: handwriting.html  handwriting.json
sample-single-pdf/: sample-single.html  sample-single.json
sample_double/: sample_double.html  sample_double.json
tests/: test_sample.py
